[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/AudioStreamPlayer.gd" type="Script" id=1]
[ext_resource path="res://ErrorLabel.gd" type="Script" id=2]
[ext_resource path="res://scripts/GridContainer.gd" type="Script" id=3]
[ext_resource path="res://images/GARQ_logo.png" type="Texture" id=4]
[ext_resource path="res://images/GD_logo.png" type="Texture" id=5]
[ext_resource path="res://sounds/default_stream.mp3" type="AudioStream" id=6]
[ext_resource path="res://scripts/YoutubeLink.gd" type="Script" id=7]
[ext_resource path="res://scripts/InfoLabel.gd" type="Script" id=8]
[ext_resource path="res://custom_theme.tres" type="Theme" id=9]
[ext_resource path="res://scripts/debug/ParamsEdit.gd" type="Script" id=10]
[ext_resource path="res://images/YAF_logo.png" type="Texture" id=11]

[node name="MainPanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
mix_target = 2
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 50.0
margin_right = -10.0
margin_bottom = -10.0
theme = ExtResource( 9 )

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
margin_right = 580.0
margin_bottom = 900.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 5
custom_constants/hseparation = 5
columns = 2
script = ExtResource( 3 )

[node name="SearchEdit" type="LineEdit" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -77.0
margin_bottom = 40.0
placeholder_text = "Search..."

[node name="AboutButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -75.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
text = "About"
flat = true

[node name="AboutContainer" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.5
margin_top = -205.5
margin_right = 184.5
margin_bottom = 205.5

[node name="PanelContainer" type="Control" parent="AboutContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 362.0
margin_bottom = 404.0

[node name="AppLogo" type="TextureRect" parent="AboutContainer/PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -114.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="GodotLogo" type="TextureRect" parent="AboutContainer/PanelContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_bottom = 64.0
texture = ExtResource( 5 )

[node name="StudioLogo" type="TextureRect" parent="AboutContainer/PanelContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -197.5
margin_top = -24.5
margin_right = -69.5
margin_bottom = 103.5
texture = ExtResource( 11 )

[node name="CloseButton" type="Button" parent="AboutContainer/PanelContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -40.0
margin_right = 55.0
focus_mode = 0
enabled_focus_mode = 0
text = "Close"

[node name="InfoLabel" type="Label" parent="AboutContainer/PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = 32.0
margin_right = 163.0
margin_bottom = 114.0
text = "Version: %VERSION% [%Q_COUNT%]
Created by TCanonMaster
Powered by Godot 3
Based on YouTube video by Harry Hanrahan
And arnold-fortune by TranquilMarmot & maxdavid"
align = 1
script = ExtResource( 8 )

[node name="LinkButton" type="LinkButton" parent="AboutContainer/PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = 130.0
margin_right = 97.0
margin_bottom = 144.0
text = "Watch the video by @hh1edits!"
script = ExtResource( 7 )

[node name="DebugContainer" type="PanelContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -112.0
margin_right = -10.0
margin_bottom = -10.0

[node name="PanelContainer" type="Control" parent="DebugContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 573.0
margin_bottom = 95.0

[node name="ParamsEdit" type="LineEdit" parent="DebugContainer/PanelContainer"]
margin_left = 10.0
margin_top = 12.0
margin_right = 227.0
margin_bottom = 36.0
text = "0.0, 0.0, 0.0, 0.0"
script = ExtResource( 10 )

[node name="PlayButton" type="Button" parent="DebugContainer/PanelContainer"]
margin_left = 11.0
margin_top = 45.0
margin_right = 109.0
margin_bottom = 81.0
text = "Play"

[node name="StopButton" type="Button" parent="DebugContainer/PanelContainer"]
margin_left = 128.0
margin_top = 45.0
margin_right = 226.0
margin_bottom = 81.0
text = "Stop"

[node name="VolumeLabel" type="Label" parent="DebugContainer/PanelContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -113.0
margin_top = -14.0
text = "0.0"
align = 2

[node name="NotificationContainer" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -185.0
margin_top = -66.0
margin_right = 183.0
margin_bottom = 71.0

[node name="PanelContainer" type="Control" parent="NotificationContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 361.0
margin_bottom = 130.0

[node name="FileInfoLabel" type="Label" parent="NotificationContainer/PanelContainer"]
anchor_left = 0.506
anchor_top = 1.0
anchor_right = 0.506
anchor_bottom = 1.0
margin_left = -178.124
margin_top = -113.0
margin_right = 175.876
margin_bottom = -82.0
text = "You can upload a better quality audio file here:
(%PATH%)"
align = 1
autowrap = true
script = ExtResource( 2 )

[node name="GotItButton" type="Button" parent="NotificationContainer/PanelContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -58.0
margin_top = -38.0
margin_right = 59.0
margin_bottom = -1.0
text = "Got it!"

[node name="PermissionsButton" type="LinkButton" parent="NotificationContainer/PanelContainer"]
anchor_left = 0.501
anchor_top = 1.0
anchor_right = 0.501
anchor_bottom = 1.0
margin_left = -93.354
margin_top = -66.0
margin_right = 93.646
margin_bottom = -49.0
text = "Request storage permissions"

[connection signal="text_changed" from="SearchEdit" to="ScrollContainer/GridContainer" method="_on_SearchEdit_text_changed"]
[connection signal="pressed" from="AboutButton" to="ScrollContainer/GridContainer" method="_on_AboutButton_pressed"]
[connection signal="pressed" from="AboutContainer/PanelContainer/CloseButton" to="ScrollContainer/GridContainer" method="_on_CloseButton_pressed"]
[connection signal="pressed" from="AboutContainer/PanelContainer/LinkButton" to="AboutContainer/PanelContainer/LinkButton" method="_on_LinkButton_pressed"]
[connection signal="pressed" from="DebugContainer/PanelContainer/PlayButton" to="DebugContainer/PanelContainer/ParamsEdit" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="DebugContainer/PanelContainer/StopButton" to="DebugContainer/PanelContainer/ParamsEdit" method="_on_StopButton_pressed"]
[connection signal="pressed" from="NotificationContainer/PanelContainer/GotItButton" to="ScrollContainer/GridContainer" method="_on_GotItButton_pressed"]
[connection signal="pressed" from="NotificationContainer/PanelContainer/PermissionsButton" to="AudioStreamPlayer" method="_on_PermissionsButton_pressed"]
